# polars-typed

./: .gitignore  README.md  prek.toml  pyproject.toml
.github/workflows/: ci.yml  release.yml
polars_typed/: __init__.py
polars_typed_tests/: __init__test.py
